# RSCU_Animation

./: .gitignore  3D_IMPLEMENTATION_SUMMARY.md  3D_VISUALIZATION_GUIDE.md  BUILD_GUIDE.md  CMakeLists.txt  FIX_SUMMARY.md  INTEGRATION_GUIDE.md  LiquidCoolingUnit.pro  PROJECT_SUMMARY.md  QUICKSTART_QMAKE.md  README.md  TESTING.md  build.bat  build_qmake.bat  clean_qmake.bat  run.bat  run_qmake.bat  test_data.json  validate_project.sh
src/: animationcontroller.cpp  animationcontroller.h  animationcontroller3d.cpp  animationcontroller3d.h  datamodel.cpp  datamodel.h  lcuscene.cpp  lcuscene.h  lcuscene3d.cpp  lcuscene3d.h  main.cpp  mainwindow.cpp  mainwindow.h
src/components/: basecomponent.cpp  basecomponent.h  blower.cpp  blower.h  condenser.cpp  condenser.h  heater.cpp  heater.h  heatexchanger.cpp  heatexchanger.h  pipe.cpp  pipe.h  pump.cpp  pump.h  solenoidvalve.cpp  solenoidvalve.h  tank.cpp  tank.h  valve.cpp  valve.h
